// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithButton /> by default matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium"
>
  <input
    className="k-TextInput k-TextInput--hasButton"
    defaultValue=""
    disabled={false}
    id="TextInputWithButton"
    name="text"
    onChange={[Function]}
  />
  <button
    className="sc-gsDKAQ iKoEYf k-Button k-TextInput__button k-Button--medium k-Button--beryllium k-Button--fit-min-width"
    disabled={false}
    style={
      Object {
        "--Button-border-radius": null,
        "--Button-bullet-color": null,
      }
    }
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with buttonProps prop matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium"
>
  <input
    className="k-TextInput k-TextInput--hasButton"
    defaultValue=""
    disabled={false}
    id="TextInputWithButton"
    name="text"
    onChange={[Function]}
  />
  <button
    className="sc-gsDKAQ iKoEYf k-Button k-TextInput__button k-Button--medium k-Button--beryllium k-Button--fit-min-width"
    onClick={[Function]}
    style={
      Object {
        "--Button-border-radius": null,
        "--Button-bullet-color": null,
      }
    }
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with component inside button value matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium"
>
  <input
    className="k-TextInput k-TextInput--hasButton"
    defaultValue=""
    disabled={false}
    id="TextInputWithButton"
    name="text"
    onChange={[Function]}
    placeholder="Les props sont transmises"
  />
  <button
    className="sc-gsDKAQ iKoEYf k-Button k-TextInput__button k-Button--medium k-Button--beryllium k-Button--fit-min-width"
    disabled={false}
    style={
      Object {
        "--Button-border-radius": null,
        "--Button-bullet-color": null,
      }
    }
    type="button"
  >
    <div
      className="sc-dkPtRN dJgvKX k-Loader"
    >
      <svg
        className="k-Loader__circle"
        fill="var(--color-grey-900, #222)"
        viewBox="0 0 5 5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={2.5}
          cy={2.5}
          r={5}
        />
      </svg>
      <svg
        className="k-Loader__circle"
        fill="var(--color-grey-900, #222)"
        viewBox="0 0 5 5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={2.5}
          cy={2.5}
          r={5}
        />
      </svg>
      <svg
        className="k-Loader__circle"
        fill="var(--color-grey-900, #222)"
        viewBox="0 0 5 5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={2.5}
          cy={2.5}
          r={5}
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`<TextInputWithButton /> with disabled prop matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium"
>
  <input
    className="k-TextInput k-TextInput--hasButton k-TextInput--disabled"
    defaultValue=""
    disabled={true}
    id="TextInputWithButton"
    name="text"
    onChange={[Function]}
  />
  <button
    className="sc-gsDKAQ iKoEYf k-Button k-TextInput__button k-Button--medium k-Button--beryllium k-Button--fit-min-width k-Button--disabled"
    disabled={true}
    style={
      Object {
        "--Button-border-radius": null,
        "--Button-bullet-color": null,
      }
    }
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with error prop matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium"
>
  <input
    className="k-TextInput k-TextInput--hasButton k-TextInput--error"
    defaultValue=""
    disabled={false}
    id="TextInputWithButton"
    name="text"
    onChange={[Function]}
  />
  <button
    className="sc-gsDKAQ iKoEYf k-Button k-TextInput__button k-Button--medium k-Button--beryllium k-Button--fit-min-width"
    disabled={false}
    style={
      Object {
        "--Button-border-radius": null,
        "--Button-bullet-color": null,
      }
    }
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with props matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium"
>
  <input
    className="k-TextInput k-TextInput--hasButton"
    defaultValue="foobar"
    disabled={false}
    id="TextInputWithButton"
    name="text"
    onChange={[Function]}
    placeholder="Les props sont transmises"
  />
  <button
    className="sc-gsDKAQ iKoEYf k-Button k-TextInput__button k-Button--medium k-Button--beryllium k-Button--fit-min-width"
    disabled={false}
    style={
      Object {
        "--Button-border-radius": null,
        "--Button-bullet-color": null,
      }
    }
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with size prop matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--small"
>
  <input
    className="k-TextInput k-TextInput--hasButton"
    defaultValue=""
    disabled={false}
    id="TextInputWithButton"
    name="text"
    onChange={[Function]}
  />
  <button
    className="sc-gsDKAQ iKoEYf k-Button k-TextInput__button k-Button--small k-Button--beryllium k-Button--fit-min-width"
    disabled={false}
    style={
      Object {
        "--Button-border-radius": null,
        "--Button-bullet-color": null,
      }
    }
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with valid prop matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium"
>
  <input
    className="k-TextInput k-TextInput--hasButton k-TextInput--valid"
    defaultValue=""
    disabled={false}
    id="TextInputWithButton"
    name="text"
    onChange={[Function]}
  />
  <button
    className="sc-gsDKAQ iKoEYf k-Button k-TextInput__button k-Button--medium k-Button--beryllium k-Button--fit-min-width"
    disabled={false}
    style={
      Object {
        "--Button-border-radius": null,
        "--Button-bullet-color": null,
      }
    }
    type="button"
  >
    Button
  </button>
</div>
`;
